# antidote

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  benchmark.ipynb  benchmark_test_utils.ipynb  comparison.ipynb  pyproject.toml  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: main.yml
antidote/: __init__.py  __version__.py  _compat.py  container.py  exceptions.py  injection.py  injector.py  manager.py
antidote/container/: __init__.py  stack.py
antidote/providers/: __init__.py  factories.py  parameters.py
blood/: __init__.py  builder.py  container.py  manager.py  util.py
dep/: __init__.py  container.py  exceptions.py
dependency_manager/: __init__.py  builder.py  container.py  exception.py  exceptions.py  injector.py  manager.py
doc/: Makefile  conf.py  index.rst  module.rst  usage.rst
docs/: Makefile  advanced_usage.rst  api.rst  build.sh  changelog.rst  conf.py  cookbook.rst.backup  extend.rst  extending.rst  faq.rst  how_to.rst  index.rst  module.rst  quickstart.rst  recipes.rst  reference.rst  requirements.txt  tutorial.rst  usage.rst  usage.rst.backup  why.rst
docs/_static/css/: style.css
docs/guide/: 1_intro.rst  2_accessing_dependencies.rst  3_defining_dependencies.rst  4_test.rst  index.rst
docs/how_to/: annotated_type_hints.rst  debug.rst  test.rst
docs/recipes/: constant.rst  interface.rst  scopes.rst
docs/reference/: config.rst  core.rst  deprecated.rst  exceptions.rst  index.rst  lib.rst  utilities.rst  world.rst
docs/tutorial/: 1_introduction.rst  2_injection.rst  3_injectable.rst  4_constant.rst  5_lazy.rst  6_tests.rst
requirements/: bindist.txt  ci.txt  dev.txt  dist.txt  docs.txt  tests.txt
src/antidote/: __init__.py  __version__.py  _config.py  _constants.py  _factory.py  _implementation.py  _lazy.py  _service.py  _utils.py  auto_provide.py  constants.py  exceptions.py  factory.py  implementation.py  injector.py  lazy.py  manager.py  service.py  tag.py  utils.py
src/antidote/_compatibility/: typing.py
src/antidote/_extension/: constants.py  factory.py  implementation.py  lazy.py  service.py
src/antidote/_internal/: API.py  __init__.py  argspec.py  config.py  default_container.py  defaults.py  global_container.py  helpers.py  localns.py  lock.pxd  lock.pyx  stack.pxd  stack.py  stack.pyx  state.pxd  state.py  state.pyx  typing.py  utils.py  world.py  wrapper.py  wrapper.pyx
src/antidote/_providers/: __init__.py  factory.py  (+10 more)
tests/: __init__.py  conftest.py  test_annotations.py  test_antidote.py  test_attrs.py  test_auto_wiring.py  test_builder.py  test_class_auto_wiring.py  test_compat.py  test_config.py  test_container.py  test_dependency_stack.py  test_examples.py  test_exceptions.py  test_function_auto_wiring.py  test_inject.py  test_injection.py  test_injector.py  test_manager.py  test_meta.py  test_registration.py  test_tagging.py  test_tags.py  test_thread_safety.py  test_util.py  test_utils.py  test_var_annotations.py  test_world.py  utils.py
tests/container/: test_compose.py  test_container.py  test_dependency.py  test_prepare.py  test_provide.py  test_proxy.py  test_stack.py  utils.py
tests/core/: dummy_providers.py  test_annotations.py  test_annotations_get.py  test_app_catalog.py  test_auto_provide.py  test_cache.py  test_catalog.py  test_catalog_overrides.py  test_catalog_test.py  test_container.py  test_current_catalog.py  test_data.py  test_debug.py  test_exceptions.py  test_getter.py  test_inject.py  test_inject_any_function.py  test_inject_custom.py  test_inject_py38.py  test_inject_through_annotations.py  test_inject_through_defaults.py  test_inject_wrapper.py  test_injection.py  test_injection_localns.py  test_injection_markers.py  test_internal.py  test_overridable_container.py  test_provider.py  test_proxy.py  test_scope.py  test_scoped.py  test_thread_safety.py  test_type_hints_locals.py  test_utils.py  test_wire.py  test_wiring.py  utils.py
tests/end_to_end/: readme.py  test_readme.py  test_type_cast.py
tests/extension/: test_auto_provide.py  test_constants.py  test_factory.py  test_implementation.py  test_implements.py  test_lazy.py  test_service.py  test_tags.py
tests/helpers/: test_attrs.py  test_auto_wiring.py  test_conf.py  test_constants.py  test_factory.py  test_getter.py  test_implements.py  test_lazy.py  test_provider.py  test_register.py  test_resource.py  test_service.py  test_tagging.py  test_wire.py
tests/injection/: test_injector.py  test_wiring.py
tests/internal/: test_utils.py
tests/internals/: test_argspec.py  test_stack.py  test_state.py  test_util.py  test_utils.py  test_wrapper.py  test_wrapper_inspect.py
tests/lib/: test_constants.py  test_factory.py  test_implementation.py  test_lazy.py  test_lib.py  test_service.py
tests/manager/: test_context.py  test_factory.py  test_getter.py  test_inject.py  test_manager.py  test_provider.py  test_register.py  test_register_parameters.py  test_tags.py  test_wire.py
tests/mypy_typing/: test_readme.py  test_type_cast.py
tests/providers/: test_build.py  test_factories.py  test_factory.py  test_getters.py  test_indirect.py  test_interface.py  test_lazy.py  test_parameters.py  test_providers.py  test_resource.py  test_service.py  test_tag.py  test_tagged.py  test_tags.py  test_world_test.py
tests/world/: test_debug.py  test_override.py  test_scopes.py  test_test.py  test_test_dependencies.py  test_world.py  utils.py
(+209 files in other folders)
