[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=3.4",
    # Ideally those would be optional...
    "cython>=0.29,<0.30",
    "fastrlock>=0.7,<0.9"
]
build-backend = "setuptools.build_meta"


############
# Manifest #
############
[tool.check-manifest]
ignore = ["src/antidote/_internal/scm_version.py"]


##########
# Pytest #
##########
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["compiled_only"]


############
# Coverage #
############
[tool.coverage.run]
branch = true
source = ["antidote", "src"]

[tool.coverage.paths]
source = [
    "src/",
    ".tox/py*/lib/python*/site-packages/",
    ".tox/pypy*/site-packages"
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "^if TYPE_CHECKING:$",
    "^\\s*\\.\\.\\.$"
]


###########
# PyRight #
###########
[tool.pyright]
include = [
    "src",
    "tests",
]
pythonVersion = "3.7"
pythonPlatform = "All"
typeCheckingMode = "strict"

# Python code is doing a lot of isinstance to actually verify typing
reportUnnecessaryIsInstance = false
# Yes we have cycles, it's not great but if tests are passing it means it works.
reportImportCycles = false
# some cast / ignores are for MyPy.
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryCast = "warning"


########
# Mypy #
########
[tool.mypy]
files = [
    "src",
    "tests",
]
python_version = "3.7"
strict = true


#########
# Black #
#########
[tool.black]
line-length = 100
target-version = ['py37']


#########
# isort #
#########
[tool.isort]
profile = "black"
py_version=37
line_length=100
balanced_wrapping=true
combine_as_imports=true
force_alphabetical_sort_within_sections=true
sort_relative_in_force_sorted_sections=true
